# traffic-light-assistant

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  nginx.conf  pyproject.toml  run.sh
.github/workflows/: build-docker-image.yml
app/: __init__.py  auth.py  database.py  models.py
app/routes/: schedules.py  traffic_lights.py
app/services/: __init__.py  pattern_detector.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.ts  auth.ts  main.ts  router.js  router.ts
frontend/src/plugins/: vuetify.ts
frontend/src/views/: AddTrafficLight.vue  OIDCCallback.vue  ScheduleCapture.vue  SchedulesList.vue  TrafficLightDetail.vue  TrafficLightsList.vue
k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  pvc.yaml  secret.yaml  service.yaml
tests/: test_pattern_detector.py
